update some files

--- a/public/html/email_templates/user_created.html
+++ b/public/html/email_templates/user_created.html
@@ -404,7 +404,7 @@
                         </tr>
                         <tr>
                             <td class="content-block powered-by">
-                                © 2022 <a href="http://w3bd.com">W3BD</a> - All rights reserved.
+                                © 2022 <a href="http://nsa.ma">NSA</a> - All rights reserved.
                             </td>
                         </tr>
                     </table>
